; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/tcsh/extr_sh.dir.c_dtildepr.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/tcsh/extr_sh.dir.c_dtildepr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [7 x i8] c"~%-S%S\00", align 1
@.str.1 = private unnamed_addr constant [3 x i8] c"%S\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @dtildepr(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32*, align 8
  store i32* %0, i32** %2, align 8
  %4 = call i32* @getusername(i32** %2)
  store i32* %4, i32** %3, align 8
  %5 = icmp ne i32* %4, null
  br i1 %5, label %6, label %10

6:                                                ; preds = %1
  %7 = load i32*, i32** %3, align 8
  %8 = load i32*, i32** %2, align 8
  %9 = call i32 (i8*, i32*, ...) @xprintf(i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str, i64 0, i64 0), i32* %7, i32* %8)
  br label %13

10:                                               ; preds = %1
  %11 = load i32*, i32** %2, align 8
  %12 = call i32 (i8*, i32*, ...) @xprintf(i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.1, i64 0, i64 0), i32* %11)
  br label %13

13:                                               ; preds = %10, %6
  ret void
}

declare dso_local i32* @getusername(i32**) #1

declare dso_local i32 @xprintf(i8*, i32*, ...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
